# cccatt

./: CHANGES.md  Makefile  README.md  TODO.md  cccatt  cccatt-mode.el  cccatt.opam  dune-project
.github/workflows/: build.yml
examples/: Makefile  bicategory-cartesian-closed-reversible.cccatt  bicategory-cartesian-closed.cccatt  bicategory-cartesian-reversible.cccatt  bicategory-cartesian.cccatt  bicategory-cartesian2.cccatt  bicategory-good.cccatt  bicategory.cccatt  birds.cccatt  bug.cccatt  cartesian.cccatt  cartesian2.cccatt  category.cccatt  ccc.cccatt  ccc2.cccatt  compact-closed.cccatt  curien.cccatt  curry-noimplicit.cccatt  curry.cccatt  curry2.cccatt  dune  lcc.cccatt  linear.cccatt  monoidal.cccatt  smcc.cccatt  symmetric.cccatt
src/: Makefile  cccatt.ml  common.ml  curry.cccatt  debug.cccatt  dune  extlib.ml  implicit.cccatt  lang.ml  lexer.ml  lexer.mll  parser.mly  pasting.ml  prover.ml  setting.ml  settings.ml  term.ml  test.cccatt  test1.cccatt  value.ml
test/: Makefile  catcomb.cccatt  curry-noimplicit.cccatt  curry.cccatt  dune  implicit.cccatt  negative.cccatt  test.cccatt
test/errors/: Makefile  hole.cccatt  unbound.cccatt
test/type-error/: README.md  eq-obj.cccatt
tests/: Makefile  directed.cccatt  dune  free-var.cccatt  implicit.cccatt  negative.cccatt  test.cccatt
tests/errors/: Makefile  eq-obj.cccatt  identity.cccatt  unbound.cccatt
web/: Makefile  cccatt.css  cccatt.ml  dune  examples.ml  highlight.js  index.html
