(rule
 (alias runtest)
 (deps curry.cccatt curry-noimplicit.cccatt curry2.cccatt curien.cccatt birds.cccatt)
 (action
   (progn
    (run ../src/cccatt.exe curry.cccatt)
    (run ../src/cccatt.exe curry-noimplicit.cccatt)
    (run ../src/cccatt.exe curry2.cccatt)
    (run ../src/cccatt.exe curien.cccatt)
    (run ../src/cccatt.exe birds.cccatt)
   )
 )
)
