(rule
 (alias runtest)
 (deps ccc.cccatt curry.cccatt curry-noimplicit.cccatt curry2.cccatt curien.cccatt birds.cccatt category.cccatt linear.cccatt monoidal.cccatt symmetric.cccatt smcc.cccatt)
 (action
  (progn
   (run ../src/cccatt.exe ccc.cccatt)
   (run ../src/cccatt.exe curry.cccatt)
   (run ../src/cccatt.exe curry-noimplicit.cccatt)
   (run ../src/cccatt.exe curry2.cccatt)
   (run ../src/cccatt.exe curien.cccatt)
   (run ../src/cccatt.exe birds.cccatt)
   (run ../src/cccatt.exe category.cccatt)
   (run ../src/cccatt.exe linear.cccatt)
   (run ../src/cccatt.exe monoidal.cccatt)
   (run ../src/cccatt.exe symmetric.cccatt)
   (run ../src/cccatt.exe smcc.cccatt)
  )
 )
)
