(env
  (dev
   (flags (:standard -w -30))
  )
)

(ocamllex (modules lexer))
(ocamlyacc (modules parser))

(library
 (public_name cccatt)
 (modules extlib common setting lang parser lexer prover)
 (wrapped false)
)

(executable
 (public_name cccatt)
 (name cccatt)
 (libraries cccatt)
 (modules cccatt)
)
