(env
  (dev
   (flags (:standard -w -30))
  )
)

(menhir (modules parser))

(library
 (public_name cccatt)
 (modules extlib common settings term pasting lang parser lexer)
 (libraries sedlex menhirLib)
 (preprocess (per_module ((pps sedlex.ppx) lexer)))
 (wrapped false)
)

(executable
 (public_name cccatt)
 (name cccatt)
 (libraries cccatt)
 (modules cccatt)
)
