(rule
 (alias runtest)
 (deps test.cccatt curry.cccatt curry-noimplicit.cccatt curien.cccatt implicit.cccatt)
 (action
   (progn
    (run ../src/cccatt.exe test.cccatt)
    (run ../src/cccatt.exe negative.cccatt)
    (run ../src/cccatt.exe curry.cccatt)
    (run ../src/cccatt.exe curry-noimplicit.cccatt)
    (run ../src/cccatt.exe curien.cccatt)
    (run ../src/cccatt.exe implicit.cccatt)
   )
 )
)
