(rule
 (alias runtest)
 (deps test.cccatt implicit.cccatt negative.cccatt free-var.cccatt directed.cccatt)
 (action
   (progn
    (run ../src/cccatt.exe test.cccatt)
    (run ../src/cccatt.exe negative.cccatt)
    (run ../src/cccatt.exe implicit.cccatt)
    (run ../src/cccatt.exe free-var.cccatt)
    (run ../src/cccatt.exe directed.cccatt)
   )
 )
)
