(executable
 (name cccatt)
 (modes js)
 (preprocess (pps ppx_optcomp ppx_blob js_of_ocaml-ppx))
 (preprocessor_deps
  (file ../tests/test.cccatt)
  (file ../tests/implicit.cccatt)
  (file ../examples/category.cccatt)
  (file ../examples/cartesian.cccatt)
  (file ../examples/ccc.cccatt)
  (file ../examples/ccc2.cccatt)
  (file ../examples/curry.cccatt)
  (file ../examples/curien.cccatt)
  (file ../examples/birds.cccatt)
  (file ../examples/linear.cccatt)
  (file ../examples/monoidal.cccatt)
  (file ../examples/symmetric.cccatt)
  (file ../examples/compact-closed.cccatt)
  (file ../examples/bicategory.cccatt)
  (file ../examples/bicategory-cartesian.cccatt)
 )
 (libraries js_of_ocaml cccatt)
)

(install
 (files index.html)
 (package cccatt)
 (section share)
)
